fix: 🐛 Adjust spacing in hero paragraph

--- a/src/components/page-section/Hero/styles/hero.styl
+++ b/src/components/page-section/Hero/styles/hero.styl
@@ -54,10 +54,10 @@
       margin-bottom 1rem
     @media screen and (min-width: 1024px)
       font-size 1.5rem
-      margin-bottom 1rem
+      margin-bottom 2rem
     @media screen and (min-width: 1440px)
       font-size 1.5rem
-      margin-bottom 1rem
+      margin-bottom 3rem
 
 
 .dot.hero
